syntax = "proto3";

package rivet.backend.pkg.captcha.turnstile_verify;

import "resources/legacy/proto/common.proto";

message Request {
	string client_response = 1;
	string remote_address = 2;
	string secret_key = 3;
}

message Response {
	bool success = 1;
}
